# gtk_lookup_test

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.in  libtool  lookup.desktop  lookup.desktop.in  lookup.gladep  lookup.prj  lookup.prj.bak  missing  mkinstalldirs
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
intl/: Makefile
macros/: Makefile  Makefile.in
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c  support.c  support.h
src/.deps/: callbacks.P  interface.P  lookup-callbacks.Po  lookup-interface.Po  lookup-main.Po  lookup-support.Po  main.P  support.P
