## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(GNOME_CFLAGS)

lookup_CFLAGS =\
	 -Wall\
	 -O1\
	 -g

bin_PROGRAMS = lookup

lookup_SOURCES = \
	support.h\
	support.c\
	main.c\
	interface.h\
	interface.c\
	callbacks.h\
	callbacks.c

lookup_LDFLAGS = 

lookup_LDADD =  \
	$(GNOME_LIBS)

